--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
@@ -468,6 +468,9 @@
     <ClInclude Include="Sources\Text.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\wetted_surface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
