First data debugging iteration. Third text iteration, multiple strings, dynamic strings. First physics iteration. Improved encapsulation. Reduced memory leaks

--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Data.hpp" />
     <ClInclude Include="Sources\FourierMesh.h" />
     <ClInclude Include="Sources\glm\common.hpp" />
     <ClInclude Include="Sources\glm\detail\func_common.hpp" />
@@ -284,6 +285,7 @@
     <ClInclude Include="Sources\glm\vec3.hpp" />
     <ClInclude Include="Sources\glm\vec4.hpp" />
     <ClInclude Include="Sources\glm\vector_relational.hpp" />
+    <ClInclude Include="Sources\Lines.hpp" />
     <ClInclude Include="Sources\Polygons.h" />
     <ClInclude Include="Sources\shader.h" />
     <ClInclude Include="Sources\simple_circles.h" />
