--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
@@ -459,9 +459,6 @@
     <ClInclude Include="Sources\Polygons.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Sources\simple_circles.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Sources\FourierMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -475,6 +472,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sources\Lines.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sources\Circles.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
