--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="Sources\Circles.hpp" />
     <ClInclude Include="Sources\Data.hpp" />
+    <ClInclude Include="Sources\FloatingObject.h" />
     <ClInclude Include="Sources\FourierMesh.h" />
     <ClInclude Include="Sources\glm\common.hpp" />
     <ClInclude Include="Sources\glm\detail\func_common.hpp" />
@@ -291,7 +292,8 @@
     <ClInclude Include="Sources\glm\vec4.hpp" />
     <ClInclude Include="Sources\glm\vector_relational.hpp" />
     <ClInclude Include="Sources\Lines.hpp" />
-    <ClInclude Include="Sources\Polygons.h" />
+    <ClInclude Include="Sources\Polygons.hpp" />
+    <ClInclude Include="Sources\borrar.h" />
     <ClInclude Include="Sources\shader.h" />
     <ClInclude Include="Sources\Text.h" />
     <ClInclude Include="Sources\utilities.h" />
