--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -112,13 +112,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);GLEW_STATIC</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\dev\C++ libs\GLEW\include;C:\dev\C++ libs\glfw-3.3.8.bin.WIN64\include;Sources;C:\dev\C++ libs\Freetype\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\dev\C++ libs\GLEW\include;C:\dev\C++ libs\glfw-3.3.8.bin.WIN64\include;Sources;C:\dev\C++ libs\Freetype\include;C:\Users\carlo\vcpkg\installed\x64-windows\include;C:\dev\C++ libs\CGAL-5.6-win64-auxiliary-libraries-gmp-mpfr (1)\auxiliary\gmp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\dev\C++ libs\GLEW\lib\Release\x64;C:\dev\C++ libs\glfw-3.3.8.bin.WIN64\lib-vc2022;C:\dev\C++ libs\Freetype\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\dev\C++ libs\GLEW\lib\Release\x64;C:\dev\C++ libs\glfw-3.3.8.bin.WIN64\lib-vc2022;C:\dev\C++ libs\Freetype\lib;C:\Users\carlo\vcpkg\installed\x64-windows\lib;C:\dev\C++ libs\CGAL-5.6-win64-auxiliary-libraries-gmp-mpfr (1)\auxiliary\gmp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;user32.lib;gdi32.lib;shell32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
