Created BinariesManager: it stores in binaries all the models and configuration. It gives an interface to swap between models and configurations in-app apart from storing the last configuration for the next execution of the program

--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\BinariesManager.h" />
     <ClInclude Include="Sources\Circles.hpp" />
     <ClInclude Include="Sources\Data.hpp" />
     <ClInclude Include="Sources\FourierMesh.h" />
