--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
@@ -480,6 +480,9 @@
     <ClInclude Include="Sources\BinariesManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\KeyMouseInputs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
