--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="Sources\BinariesManager.h" />
     <ClInclude Include="Sources\Circles.hpp" />
+    <ClInclude Include="Sources\Common.cpp" />
     <ClInclude Include="Sources\Data.hpp" />
     <ClInclude Include="Sources\FourierMesh.h" />
     <ClInclude Include="Sources\glm\common.hpp" />
@@ -293,16 +294,20 @@
     <ClInclude Include="Sources\glm\vector_relational.hpp" />
     <ClInclude Include="Sources\KeyMouseInputs.h" />
     <ClInclude Include="Sources\Lines.hpp" />
+    <ClInclude Include="Sources\newLines.hpp" />
+    <ClInclude Include="Sources\newPolygons.h" />
+    <ClInclude Include="Sources\newWetted_Surface.hpp" />
     <ClInclude Include="Sources\Wetted_Surface.hpp" />
     <ClInclude Include="Sources\Polygons.hpp" />
     <ClInclude Include="Sources\shader.h" />
     <ClInclude Include="Sources\Text.h" />
-    <ClInclude Include="Sources\utilities.h" />
+    <ClInclude Include="Sources\utilities.cpp" />
     <ClInclude Include="Sources\vector_operations.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Sources\glm\detail\glm.cpp" />
+    <ClCompile Include="Sources\Wetted_Surface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\shader1.shader" />
