--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj.filters
@@ -495,6 +495,12 @@
     <ClInclude Include="Sources\newPolygons.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\newFourier.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sources\newCircles.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
