Next iteration for the sweep triangulation algorithm for 2d: reduced, cleaned, improved efficiency and resolved edge cases; should resolve every case

--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -309,6 +309,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Sources\glm\detail\glm.cpp" />
+    <ClCompile Include="Sources\Polygons.cpp" />
     <ClCompile Include="Sources\Wetted_Surface.cpp" />
   </ItemGroup>
   <ItemGroup>
