--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -144,10 +144,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Sources\BinariesManager.h" />
-    <ClInclude Include="Sources\Circles.hpp" />
     <ClInclude Include="Sources\Common.cpp" />
     <ClInclude Include="Sources\Data.hpp" />
-    <ClInclude Include="Sources\FourierMesh.h" />
     <ClInclude Include="Sources\glm\common.hpp" />
     <ClInclude Include="Sources\glm\detail\func_common.hpp" />
     <ClInclude Include="Sources\glm\detail\func_exponential.hpp" />
@@ -293,14 +291,11 @@
     <ClInclude Include="Sources\glm\vec4.hpp" />
     <ClInclude Include="Sources\glm\vector_relational.hpp" />
     <ClInclude Include="Sources\KeyMouseInputs.h" />
+    <ClInclude Include="Sources\Circles.hpp" />
+    <ClInclude Include="Sources\Fourier.hpp" />
     <ClInclude Include="Sources\Lines.hpp" />
-    <ClInclude Include="Sources\newCircles.hpp" />
-    <ClInclude Include="Sources\newFourier.hpp" />
-    <ClInclude Include="Sources\newLines.hpp" />
-    <ClInclude Include="Sources\newPolygons.h" />
-    <ClInclude Include="Sources\newWetted_Surface.hpp" />
-    <ClInclude Include="Sources\Wetted_Surface.hpp" />
     <ClInclude Include="Sources\Polygons.hpp" />
+    <ClInclude Include="Sources\Wetted_Surface.hpp" />
     <ClInclude Include="Sources\shader.h" />
     <ClInclude Include="Sources\Text.h" />
     <ClInclude Include="Sources\utilities.cpp" />
