--- a/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
+++ b/Buoyancy-Simulation-2D/Buoyancy-Simulation-2D.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Sources\BinariesManager.h" />
     <ClInclude Include="Sources\Common.cpp" />
     <ClInclude Include="Sources\Data.hpp" />
+    <ClInclude Include="Sources\Delaunay.hpp" />
     <ClInclude Include="Sources\glm\common.hpp" />
     <ClInclude Include="Sources\glm\detail\func_common.hpp" />
     <ClInclude Include="Sources\glm\detail\func_exponential.hpp" />
@@ -296,6 +297,7 @@
     <ClInclude Include="Sources\Fourier.hpp" />
     <ClInclude Include="Sources\Lines.hpp" />
     <ClInclude Include="Sources\Polygons.hpp" />
+    <ClInclude Include="Sources\Random_Mesh.hpp" />
     <ClInclude Include="Sources\Time.hpp" />
     <ClInclude Include="Sources\Wetted_Surface.hpp" />
     <ClInclude Include="Sources\shader.h" />
